--- a/SystemSetting/src/main/resources/application.properties
+++ b/SystemSetting/src/main/resources/application.properties
@@ -6,7 +6,7 @@ zookeeper.address=127.0.0.1:2181
 #ip、端口
 spring.datasource.url=jdbc:dm://localhost:5236?useUnicode=true&characterEncoding=UTF-8
 #用户名
-spring.datasource.username=SYSDBA
+spring.datasource.username=BASISDATA1
 #密码
 spring.datasource.password=abcd123456
 spring.datasource.driver-class-name=dm.jdbc.driver.DmDriver
